tests/safety/reject/mul_overflow.keel
def main(sys: System); Io:
    println(9223372036854775807 * 2)
